Start building interface.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
   </head>
   <body>
     <form id="hungry-bear-form">
-      <label for="goal">FEED ME!</label>
-      <input id="goal" type="number">
-      <button type="submit">Submit</button>
+      <p>FEED ME!</p>
+    <!-- Small items -->
+      <button type="button" id="blueberries" name="button">Blueberries</button>
+      <button type="button" id="fish" name="button">Fish</button>
+      <button type="button" id="leaves" name="button">Leaves</button>
+    <!-- Medium items -->
+    <button type="button" id="honey" name="button">Honey</button>
+    <button type="button" id="racoon" name="button">Racoon</button>
+    <button type="button" id="owl" name="button">Owl</button>
+    <!-- Big items -->
+    <button type="button" id="mountain lion" name="button">Mountain lion</button>
+    <button type="button" id="flat tire" name="button">Flat tire</button>
+    <button type="button" id="deer" name="button">Deer</button>
+    <!-- human item -->
+    <button type="button" id="human" name="button">Human</button>
+    <!-- doughnut item -->
+    <button type="button" id="chocolate doughnut" name="button">Chocolate Doughnut</button>
     </form>
-    <ul id="solution"></ul>
+    <div id="outcome">
+      <p></p>
+    </div>
   </body>
 </html>
