Add setInterval functionality to continually update feed level and decrease feed level incrementally and functionality for blueberry button.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <!-- doughnut item -->
     <button type="button" id="chocolate doughnut" name="button">Chocolate Doughnut</button>
     </form>
-    <div id="outcome">
-      <p></p>
+    <br>
+    <div>
+      <p>Your bear's hunger level is:<span id="outcome"></span></p>
     </div>
   </body>
 </html>
