Add functionality for all food buttons.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="build/css/vendor.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
@@ -15,20 +16,23 @@
       <button type="button" id="leaves" name="button">Leaves</button>
     <!-- Medium items -->
     <button type="button" id="honey" name="button">Honey</button>
-    <button type="button" id="racoon" name="button">Racoon</button>
+    <button type="button" id="raccoon" name="button">Raccoon</button>
     <button type="button" id="owl" name="button">Owl</button>
     <!-- Big items -->
-    <button type="button" id="mountain lion" name="button">Mountain lion</button>
-    <button type="button" id="flat tire" name="button">Flat tire</button>
+    <button type="button" id="mountainLion" name="button">Mountain lion</button>
+    <button type="button" id="flatTire" name="button">Flat tire</button>
     <button type="button" id="deer" name="button">Deer</button>
     <!-- human item -->
     <button type="button" id="human" name="button">Human</button>
     <!-- doughnut item -->
-    <button type="button" id="chocolate doughnut" name="button">Chocolate Doughnut</button>
+    <button type="button" id="chocolateD" name="button">Chocolate Doughnut</button>
     </form>
     <br>
     <div>
       <p>Your bear's hunger level is:<span id="outcome"></span></p>
+    </div>
+    <div id="lose">
+      <h1>The bear ate you. You lose!</h1>
     </div>
   </body>
 </html>
